--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flashcard-app",
   "version": "1.0.0",
+  "homepage": "https://company-flowlab.github.io/flashcard",
   "private": true,
   "dependencies": {
     "lucide-react": "^0.284.0",
@@ -8,9 +9,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
