--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "my-flashcard-app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://<SEU_USUARIO_GITHUB>.github.io/<NOME_DO_REPOSITORIO>",
+  "homepage": "https://company-flowlab.github.io/flashcard/",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -32,3 +32,4 @@
     "vite": "^5.2.0"
   }
 }
+
