--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,24 @@
-{
-  "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ],
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node@2.x"
-    }
-  },
-  "headers": [
-    {
-      "source": "/api/(.*)",
+      "rewrites": [
+        {
+          "source": "/api/(.*)",
+          "destination": "/api/$1"
+        }
+      ],
+      "functions": {
+        "api/**/*.js": {
+          "runtime": "nodejs18.x"
+        }
+      },
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
+        {
+          "source": "/api/(.*)",
+          "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "*" },
+            { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+            { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
+          ]
+        }
       ]
     }
-  ]
-}
+    
