--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,23 @@
+{
+  "rewrites": [
     {
-      "rewrites": [
-        {
-          "source": "/api/(.*)",
-          "destination": "/api/$1"
-        }
-      ],
-      "functions": {
-        "api/**/*.js": {
-          "runtime": "nodejs18.x"
-        }
-      },
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs"
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
       "headers": [
-        {
-          "source": "/api/(.*)",
-          "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "*" },
-            { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-            { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
-          ]
-        }
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
       ]
     }
-    
+  ]
+}
